# samikaran2026

./: .replit  PRODUCTION_INSERT.sql  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  replit.md  vite.config.ts
.migration-backup/: .gitignore  PRODUCTION_EXAM_REGISTRATIONS.sql  pyproject.toml  replit.md  vite.config.ts
.migration-backup/.agents/: agent_assets_metadata.toml
.migration-backup/attached_assets/: Pasted--MODULE-NAME--1767719593239_1767719593241.txt  Pasted-COMPREHENSIVE-SEO-PUBLIC-WEBSITE-OPTIMIZATION-I-audited_1776583998607.txt  Pasted-CORE-VISION-WHAT-YOU-ARE-BUILDING-You-are-building-NOT-_1767280647111.txt  Pasted-CRITICAL-FIX-NEEDED-ALL-HEADINGS-H1-H2-H3-H4-across-ENT_1776595596756.txt  Pasted-CRITICAL-PLATFORM-EXPANSION-Transform-from-School-Olymp_1776588333857.txt  Pasted-Further-optimize-ONLY-this-current-Samikaran-Olympiad-R_1777623678439.txt  Pasted-I-am-upgrading-my-existing-Olympiad-system-into-a-Multi_1773137773567.txt  Pasted-I-need-to-implement-a-RANDOM-QUESTION-DISTRIBUTION-SYST_1769271889826.txt  Pasted-I-want-a-FULL-END-TO-END-SYSTEM-AUDIT-AND-RECONNECTION-_1772204875761.txt  Pasted-I-want-to-IMPLEMENT-A-REAL-NATIVE-APP-LIKE-SPLASH-LAUNC_1769274997357.txt  Pasted-I-want-to-convert-my-ENTIRE-WEB-PROJECT-into-a-FULL-MOB_1769273392389.txt  Pasted-I-want-to-implement-a-SMART-COST-FREE-RULE-BASED-CHATBO_1769274172161.txt  Pasted-IMPORTANT-BEHAVIOR-FIX-REQUIRED-DO-NOT-IGNORE-Problem-W_1769151819337.txt  Pasted-IMPORTANT-UI-ARCHITECTURE-RULES-DO-NOT-VIOLATE-I-alread_1769099127906.txt  (+29 more)
client/: index.html  (+1 more)
(+410 files in other folders)
