[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "mediapipe>=0.10.31",
    "numpy>=2.4.0",
    "opencv-python>=4.13.0.90",
    "opencv-python-headless>=4.11.0.86",
    "pillow>=12.1.0",
    "uvicorn>=0.40.0",
]
